--- a/TestingEstimote/app/src/main/res/layout/activity_main.xml
+++ b/TestingEstimote/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".view.activity.MainActivity">
 
+    <Button
+        android:id="@+id/activityMainRegisterNewBeacon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/action_register_bacon"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
